--- a/CSDLPT/App.config
+++ b/CSDLPT/App.config
@@ -10,7 +10,7 @@
       connectionString="Data Source=DESKTOP-0VD6HF8;Initial Catalog=QLDSV;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="CSDLPT.Properties.Settings.QLDSVConnectionStringSERVER1"
-      connectionString="Data Source=DESKTOP-0VD6HF8\SERVER1;Initial Catalog=QLDSV;User ID=son"
+      connectionString="Data Source=DESKTOP-0VD6HF8\SERVER1;Initial Catalog=QLDSV;User ID=son;Password=123"
       providerName="System.Data.SqlClient" />
     <add name="CSDLPT.Properties.Settings.QLDSVConnectionString1"
       connectionString="Data Source=DESKTOP-0VD6HF8\SERVER3;Initial Catalog=QLDSV;Integrated Security=True"
