--- a/CSDLPT/CSDLPT.csproj
+++ b/CSDLPT/CSDLPT.csproj
@@ -124,11 +124,23 @@
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportForm\InBD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm\InBD.Designer.cs">
+      <DependentUpon>InBD.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportForm\InDSSV.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ReportForm\InDSSV.Designer.cs">
       <DependentUpon>InDSSV.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Report\InBangDiem.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Report\InBangDiem.Designer.cs">
+      <DependentUpon>InBangDiem.cs</DependentUpon>
     </Compile>
     <Compile Include="Report\InDanhSachSinhVienLop.cs">
       <SubType>Component</SubType>
@@ -170,8 +182,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReportForm\InBD.resx">
+      <DependentUpon>InBD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\InDSSV.resx">
       <DependentUpon>InDSSV.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\InBangDiem.resx">
+      <DependentUpon>InBangDiem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report\InDanhSachSinhVienLop.resx">
       <DependentUpon>InDanhSachSinhVienLop.cs</DependentUpon>
